--- a/app/src/main/res/layout/fragment_wallet_transaction.xml
+++ b/app/src/main/res/layout/fragment_wallet_transaction.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".WalletTransactionFragment"
+    tools:context=".feature.wallet.WalletTransactionFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -74,7 +74,7 @@
             android:id="@+id/spinner_wallet_filter"
             android:layout_width="88dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_round_border_4dp"
+            android:background="@drawable/bg_wallet_spinner"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -82,6 +82,14 @@
             android:spinnerMode="dropdown"
             />
 
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-    <!-- 프래그먼트? 들어갈 자리? -->
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
