--- a/app/src/main/res/layout/fragment_wallet_transaction_none.xml
+++ b/app/src/main/res/layout/fragment_wallet_transaction_none.xml
@@ -4,49 +4,56 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         >
-
-        <ImageView
-            android:id="@+id/imgview_wallet_nonetransaction"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/ic_transaction_none_48dp"
-            android:contentDescription="@string/wallet_nonetransaction"
+        <androidx.constraintlayout.widget.ConstraintLayout
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="28dp"
-            />
-        <TextView
-            android:id="@+id/txtview_wallet_nonetransaction"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/wallet_nonetransaction"
-            android:textColor="@color/warm_grey"
-            android:fontFamily="@font/noto_sans_kr_medium"
-            android:includeFontPadding="false"
-            android:textSize="18sp"
-            app:layout_constraintTop_toBottomOf="@+id/imgview_wallet_nonetransaction"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp"
-            />
-        <TextView
-            android:id="@+id/txtview_wallet_nonestockadvice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/wallet_nonetransactionadvice"
-            android:textColor="@color/warm_grey"
-            android:fontFamily="@font/noto_sans_kr_medium"
-            android:includeFontPadding="false"
-            android:textSize="10sp"
-            app:layout_constraintTop_toBottomOf="@+id/txtview_wallet_nonetransaction"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="86dp"
-            />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content">
+
+            <ImageView
+                android:id="@+id/imgview_wallet_nonetransaction"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ic_transaction_none_48dp"
+                android:contentDescription="@string/wallet_nonetransaction"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
+            <TextView
+                android:id="@+id/txtview_wallet_nonetransaction"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/wallet_nonetransaction"
+                android:textColor="@color/warm_grey"
+                android:fontFamily="@font/noto_sans_kr_medium"
+                android:includeFontPadding="false"
+                android:textSize="18sp"
+                app:layout_constraintTop_toBottomOf="@+id/imgview_wallet_nonetransaction"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="8dp"
+                />
+            <TextView
+                android:id="@+id/txtview_wallet_nonestockadvice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/wallet_nonetransactionadvice"
+                android:textColor="@color/warm_grey"
+                android:fontFamily="@font/noto_sans_kr_medium"
+                android:includeFontPadding="false"
+                android:textSize="10sp"
+                app:layout_constraintTop_toBottomOf="@+id/txtview_wallet_nonetransaction"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginTop="8dp"
+
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
