--- a/app/src/main/res/layout/fragment_walllet_transaction_list.xml
+++ b/app/src/main/res/layout/fragment_walllet_transaction_list.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
         <androidx.recyclerview.widget.RecyclerView
-            xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/rcview_wallet_transaction"
             android:layout_width="match_parent"
@@ -12,4 +15,4 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
-
+</FrameLayout>
