--- a/app/src/main/res/layout/fragment_wallet_transaction.xml
+++ b/app/src/main/res/layout/fragment_wallet_transaction.xml
@@ -91,11 +91,13 @@
         app:layout_constraintTop_toBottomOf="@+id/layout_wallet_transactionfilter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:paddingBottom="44dp"
+
         >
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingBottom="44dp"
+            >
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcview_wallet_stocklist"
                 android:layout_width="match_parent"
