--- a/app/src/main/res/layout/fragment_wallet_transaction_none.xml
+++ b/app/src/main/res/layout/fragment_wallet_transaction_none.xml
@@ -5,6 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingTop="44dp"
         >
         <androidx.constraintlayout.widget.ConstraintLayout
             app:layout_constraintTop_toTopOf="parent"
